[PRA-3] Create Prior Price Endpoint